# firechicken.club

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  Shuttle.toml  _redirects  build.zig  build.zig.zon  firechicken.toml  fly.toml  index.html  members.json  netlify.toml  opml.xml
.github/workflows/: ci.yaml
colophon/: index.html
src/: firechicken.rs  main.rs  main.zig  members.zig  opml.rs  templates.rs  templates.zig
static/: netlify.toml  style.css
templates/: 404.html  colophon.html  footer.html  header.html  index.html  opml.xml
