[package]
name = "firechicken-club"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false, features = ["std", "serde"] }
clap = { version = "4", features = ["derive"] }
file-serve = "0.3"
maud = { version = "0.25.0", features = ["axum"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
serde = { version = "1", features = ["derive"], default-features = false }
tempdir = "0.3.7"
toml = "0.8"
ureq = "2.8.0"
url = { version = "2.4.1", features = ["serde"] }
zip = "0.6.6"
lazy_static = "1"
