[package]
name = "firechicken-club"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
  "clock",
] }
clap = { version = "4", features = ["derive"] }
file-serve = "0.3"
maud = { version = "0.25", features = ["axum"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"], default-features = false }
tempdir = "0.3"
toml = "0.8"
ureq = "2.8"
url = { version = "2.4", features = ["serde"] }
zip = "0.6"
lazy_static = "1"
blake3 = "1.5"
quick-xml = { version = "0.31", features = ["serialize"] }
